# poetry-template

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
notebooks/: notebook_test.ipynb
tests/: test_main.py
utils/: dataframes.py  files.py  functions.py
