[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["mharv <mitch.k.harvey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
pytest = "^8.0.0"
notebook = "^7.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
program = "mypy main.py"
