[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["mharv <mitch.k.harvey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
pytest = "^8.0.0"
notebook = "^7.0.7"
black = { extras = ["jupyter"], version = "^24.1.1" }
pandas = "^2.2.0"
pandas-stubs = "^2.1.4.231227"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# format = "black ."
# type-check = "mypy ."
# test = "pytest"
# run-main = "python main.py"
